[project]
name = "telegram-bot-news"
version = "0.1.0"
description = "A bot that crawls content from Telegram channels and Twitter accounts with AI-powered summarization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai==1.12.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-telegram-bot==20.7",
    "requests==2.31.0",
    "schedule==1.2.0",
    "telethon==1.34.0",
]
